Parser/Parser.cpp
#include "Parser.hpp"
#include "tempAST.hpp"
#include <stdexcept>
#include <vector>
#include <string>
#include <memory>
#include <utility>

using namespace std;

Parser::Parser(Lexer& lexer_instance)
        : lexer_ref(lexer_instance), current_pos(0), had_error(false) {
    Token t = lexer_ref.nextToken();
    while(t.type != TokenType::TK_EOF) {
        if (lexer_ref.getErrors().size() > errors_list.size()) {
            for(size_t i = errors_list.size(); i < lexer_ref.getErrors().size(); ++i) {
                errors_list.push_back("Lexer Error: " + lexer_ref.getErrors()[i].message + " on line " + to_string(lexer_ref.getErrors()[i].line) + " near '" + lexer_ref.getErrors()[i].lexeme + "'");
            }
            had_error = true;
        }
        t = lexer_ref.nextToken();
    }
    if (lexer_ref.tokens.empty() || lexer_ref.tokens.back().type != TokenType::TK_EOF) {
        lexer_ref.tokens.push_back({TokenType::TK_EOF, "", lexer_ref.tokens.empty() ? 1 : lexer_ref.tokens.back().line, TokenCategory::EOFILE});
    }

    lexer_ref.processIdentifierTypes();
    this->tokens = lexer_ref.tokens;

    if (had_error) {
        this->tokens.clear();
        this->tokens.push_back({TokenType::TK_EOF, "", 0, TokenCategory::EOFILE});
    }
}

shared_ptr<AstNode> Parser::parse() {
    if (tokens.empty() || (tokens.size() == 1 && tokens[0].type == TokenType::TK_EOF && had_error)) {
        if (!had_error) reportError(tokens.empty() ? Token{TokenType::TK_EOF, "", 0, TokenCategory::EOFILE} : tokens[0], "No tokens to parse.");
        return make_shared<AstNode>(NodeType::ProgramNode, Token{TokenType::TK_EOF, "", 0, TokenCategory::EOFILE});
    }
    current_pos = 0;
    auto module = parseFile();
    saveDotFile(generateDot(module), "AST.dot");
    return module;
}

Token& Parser::peek(int offset) {
    if (current_pos + offset >= tokens.size()) {
        return tokens.back().type == TokenType::TK_EOF ? tokens.back() : tokens.emplace_back(TokenType::TK_EOF, "", tokens.empty() ? 1 : tokens.back().line, TokenCategory::EOFILE);
    }
    return tokens[current_pos + offset];
}

Token& Parser::previous() {
    if (current_pos == 0 || current_pos > tokens.size()) {
        return tokens.back().type == TokenType::TK_EOF ? tokens.back() : tokens.emplace_back(TokenType::TK_EOF, "", tokens.empty() ? 1 : tokens.back().line, TokenCategory::EOFILE);
    }
    return tokens[current_pos - 1];
}

bool Parser::isAtEnd(int offset) {
    return current_pos + offset >= tokens.size() || peek(offset).type == TokenType::TK_EOF;
}

Token Parser::advance() {
    if (!isAtEnd()) {
        current_pos++;
    }
    return previous();
}

bool Parser::check(TokenType type) const {
    if (current_pos >= tokens.size() || tokens[current_pos].type == TokenType::TK_EOF) return false;
    return tokens[current_pos].type == type;
}

bool Parser::check(const vector<TokenType>& types) const {
    if (current_pos >= tokens.size() || tokens[current_pos].type == TokenType::TK_EOF) return false;
    for (TokenType type : types) {
        if (tokens[current_pos].type == type) return true;
    }
    return false;
}

bool Parser::match(TokenType type) {
    if (check(type)) {
        advance();
        return true;
    }
    return false;
}

Token Parser::consume(TokenType type, const string& message) {
    if (check(type)) {
        return advance();
    }
    reportError(peek(), message);
    throw runtime_error("Parse error: " + message);
}

void Parser::reportError(const Token& token, const string& message) {
    had_error = true;
    if (token.type == TokenType::TK_EOF) {
        errors_list.push_back("[line " + to_string(token.line) + "] Error at end: " + message);
    } else {
        errors_list.push_back("[line " + to_string(token.line) + "] Error at '" + token.lexeme + "': " + message);
    }
}

void Parser::synchronize() {
    if (isAtEnd()) return;
    advance();

    while (!isAtEnd()) {
        if (previous().type == TokenType::TK_SEMICOLON) return;
        if (peek().type == TokenType::TK_DEDENT) return;

        switch (peek().type) {
            case TokenType::TK_CLASS:
            case TokenType::TK_DEF:
            case TokenType::TK_IF:
            case TokenType::TK_FOR:
            case TokenType::TK_WHILE:
            case TokenType::TK_TRY:
            case TokenType::TK_WITH:
            case TokenType::TK_RETURN:
            case TokenType::TK_IMPORT:
            case TokenType::TK_FROM:
            case TokenType::TK_GLOBAL:
            case TokenType::TK_NONLOCAL:
            case TokenType::TK_PASS:
            case TokenType::TK_BREAK:
            case TokenType::TK_CONTINUE:
            case TokenType::TK_RAISE:
                return;
            default:
                if (peek().type == TokenType::TK_INDENT) return;
        }
        advance();
    }
}

shared_ptr<AstNode> Parser::parseFile() {
    int start_line = tokens.empty() ? 0 : tokens[0].line;
    auto program_node = make_shared<AstNode>(NodeType::ProgramNode, Token{TokenType::TK_EOF, "", start_line, TokenCategory::EOFILE});
    if (!isAtEnd() && peek().type != TokenType::TK_EOF) {
        program_node->children = parseStatementsOpt();
    }

    if (!isAtEnd() && peek().type == TokenType::TK_EOF) {
        consume(TokenType::TK_EOF, "Expected end of file.");
    } else if (!isAtEnd()) {
        reportError(peek(), "Expected end of file, but found more tokens.");
        while(!isAtEnd()) advance();
    }
    return program_node;
}

vector<shared_ptr<AstNode>> Parser::parseStatementsOpt() {
    if (isAtEnd() || peek().type == TokenType::TK_EOF || peek().type == TokenType::TK_DEDENT) {
        return {};
    }
    return parseStatements();
}

vector<shared_ptr<AstNode>> Parser::parseStatements() {
    vector<shared_ptr<AstNode>> stmts_list;
    while (!isAtEnd() && peek().type != TokenType::TK_EOF && peek().type != TokenType::TK_DEDENT) {
        try {
            stmts_list.push_back(parseStatement());
        } catch (const runtime_error& e) {
            synchronize();
            if (isAtEnd() || peek().type == TokenType::TK_EOF || peek().type == TokenType::TK_DEDENT) break;
        }
    }
    return stmts_list;
}

shared_ptr<AstNode> Parser::parseStatement() {
    TokenType current_type = peek().type;
    switch (current_type) {
        case TokenType::TK_DEF:
        case TokenType::TK_IF:
        case TokenType::TK_CLASS:
        case TokenType::TK_FOR:
        case TokenType::TK_TRY:
        case TokenType::TK_WHILE:
            return parseCompoundStmt();
        default:
            auto stmt = parseSimpleStmt();
            match(TokenType::TK_SEMICOLON);
            return stmt;
    }
}

vector<shared_ptr<AstNode>> Parser::parseSimpleStmts() {
    vector<shared_ptr<AstNode>> stmts_list;
    stmts_list.push_back(parseSimpleStmt());
    while (match(TokenType::TK_SEMICOLON)) {
        if (isAtEnd() || check(TokenType::TK_EOF) || check(TokenType::TK_DEDENT)
            || (peek().line > previous().line && !check(TokenType::TK_INDENT) && !check(TokenType::TK_DEDENT)) ) {
            break;
        }
        stmts_list.push_back(parseSimpleStmt());
    }
    return stmts_list;
}

shared_ptr<AstNode> Parser::parseSimpleStmt() {
    int line = peek().line;

    switch (peek().type) {
        case TokenType::TK_RETURN:  return parseReturnStmt();
        case TokenType::TK_IMPORT:  return parseImportStatement();
        case TokenType::TK_RAISE:   return parseRaiseStmt();
        case TokenType::TK_PASS:    advance(); return make_shared<AstNode>(NodeType::PassStatementNode, Token{TokenType::TK_PASS, "pass", line, TokenCategory::KEYWORD});
        case TokenType::TK_BREAK:   advance(); return make_shared<AstNode>(NodeType::BreakStatementNode, Token{TokenType::TK_BREAK, "break", line, TokenCategory::KEYWORD});
        case TokenType::TK_CONTINUE:advance(); return make_shared<AstNode>(NodeType::ContinueStatementNode, Token{TokenType::TK_CONTINUE, "continue", line, TokenCategory::KEYWORD});
        case TokenType::TK_GLOBAL:  return parseGlobalStmt();
        case TokenType::TK_NONLOCAL:return parseNonlocalStmt();
        default:
            break;
    }

    size_t initial_pos = current_pos;
    bool initial_had_error_flag = had_error;
    size_t initial_errors_count = errors_list.size();

    vector<shared_ptr<AstNode>> potential_targets = parseTargets();

    if (!had_error && !potential_targets.empty()) {
        if (check(TokenType::TK_ASSIGN)) {
            consume(TokenType::TK_ASSIGN, "Expected '=' for assignment.");
            if (had_error) {
                return make_shared<AstNode>(NodeType::PassStatementNode, Token{TokenType::TK_PASS, "pass", line, TokenCategory::KEYWORD});
            }
            auto rhs_value = parseExpressions();
            if (had_error && !rhs_value) {
                return make_shared<AstNode>(NodeType::PassStatementNode, Token{TokenType::TK_PASS, "pass", line, TokenCategory::KEYWORD});
            }
            auto assignment_node = make_shared<AstNode>(NodeType::AssignmentStatementNode, Token{TokenType::TK_ASSIGN, "=", line, TokenCategory::OPERATOR});
            assignment_node->children = std::move(potential_targets);
            assignment_node->children.push_back(rhs_value);
            return assignment_node;
        }
    }

    current_pos = initial_pos;
    if (errors_list.size() > initial_errors_count) {
        errors_list.resize(initial_errors_count);
    }
    had_error = initial_had_error_flag;

    initial_pos = current_pos;
    initial_had_error_flag = had_error;
    initial_errors_count = errors_list.size();

    shared_ptr<AstNode> potential_single_target = parseSingleTarget();

    if (!had_error && potential_single_target) {
        if (check({TokenType::TK_PLUS_ASSIGN, TokenType::TK_MINUS_ASSIGN, TokenType::TK_MULTIPLY_ASSIGN,
                   TokenType::TK_DIVIDE_ASSIGN, TokenType::TK_MOD_ASSIGN, TokenType::TK_BIT_AND_ASSIGN,
                   TokenType::TK_BIT_OR_ASSIGN, TokenType::TK_BIT_XOR_ASSIGN, TokenType::TK_BIT_LEFT_SHIFT_ASSIGN,
                   TokenType::TK_BIT_RIGHT_SHIFT_ASSIGN, TokenType::TK_POWER_ASSIGN, TokenType::TK_FLOORDIV_ASSIGN})) {
            Token op = parseAugassign();
            if (had_error) {
                return make_shared<AstNode>(NodeType::PassStatementNode, Token{TokenType::TK_PASS, "pass", line, TokenCategory::KEYWORD});
            }
            auto rhs_value = parseExpressions();
            if (had_error && !rhs_value) {
                return make_shared<AstNode>(NodeType::PassStatementNode, Token{TokenType::TK_PASS, "pass", line, TokenCategory::KEYWORD});
            }
            auto augassign_node = make_shared<AstNode>(NodeType::AugAssignNode, op);
            augassign_node->children.push_back(std::move(potential_single_target));
            augassign_node->children.push_back(rhs_value);
            return augassign_node;
        }
    }

    current_pos = initial_pos;
    if (errors_list.size() > initial_errors_count) {
        errors_list.resize(initial_errors_count);
    }
    had_error = initial_had_error_flag;

    auto expr_stmt_expr = parseExpressions();

    if (had_error && !expr_stmt_expr) {
        if (!had_error) reportError(peek(), "Expected an expression or assignment.");
        return make_shared<AstNode>(NodeType::PassStatementNode, Token{TokenType::TK_PASS, "pass", line, TokenCategory::KEYWORD});
    }
    auto expr_stmt_node = make_shared<AstNode>(NodeType::ExpressionStatementNode, Token{TokenType::TK_EOF, "", line, TokenCategory::EOFILE});
    expr_stmt_node->children.push_back(std::move(expr_stmt_expr));
    return expr_stmt_node;
}

shared_ptr<AstNode> Parser::parseCompoundStmt() {
    switch (peek().type) {
        case TokenType::TK_DEF:     return parseFunctionDef();
        case TokenType::TK_IF:      return parseIfStmt();
        case TokenType::TK_CLASS:   return parseClassDef();
        case TokenType::TK_FOR:     return parseForStmt();
        case TokenType::TK_TRY:     return parseTryStmt();
        case TokenType::TK_WHILE:   return parseWhileStmt();
        default:
            reportError(peek(), "Expected a compound statement keyword (def, if, class, etc.).");
            throw runtime_error("Invalid compound statement.");
    }
}

Token Parser::parseAugassign() {
    vector<TokenType> aug_ops = {
            TokenType::TK_PLUS_ASSIGN, TokenType::TK_MINUS_ASSIGN, TokenType::TK_MULTIPLY_ASSIGN, TokenType::TK_DIVIDE_ASSIGN,
            TokenType::TK_MOD_ASSIGN, TokenType::TK_BIT_AND_ASSIGN, TokenType::TK_BIT_OR_ASSIGN, TokenType::TK_BIT_XOR_ASSIGN,
            TokenType::TK_BIT_LEFT_SHIFT_ASSIGN, TokenType::TK_BIT_RIGHT_SHIFT_ASSIGN, TokenType::TK_POWER_ASSIGN,
            TokenType::TK_FLOORDIV_ASSIGN
    };
    if (check(aug_ops)) {
        return advance();
    }
    reportError(peek(), "Expected augmented assignment operator (+=, -=, etc.).");
    throw runtime_error("Invalid augmented assignment operator.");
}

shared_ptr<AstNode> Parser::parseReturnStmt() {
    Token ret_token = consume(TokenType::TK_RETURN, "Expected 'return'.");
    shared_ptr<AstNode> value = nullptr;
    if (!isAtEnd() && peek().type != TokenType::TK_SEMICOLON && peek().type != TokenType::TK_DEDENT && peek().type != TokenType::TK_EOF
        && peek().line == ret_token.line) {
        value = parseExpressionsOpt();
    }
    auto return_node = make_shared<AstNode>(NodeType::ReturnStatementNode, ret_token);
    if (value) return_node->children.push_back(std::move(value));
    return return_node;
}

shared_ptr<AstNode> Parser::parseExpressionsOpt() {
    if (isAtEnd() || check(TokenType::TK_SEMICOLON) || check(TokenType::TK_DEDENT) || check(TokenType::TK_EOF)
        || ( peek().line > previous().line && previous().type != TokenType::TK_COMMA )
            ) {
        return nullptr;
    }
    return parseExpressions();
}

shared_ptr<AstNode> Parser::parseExpressions() {
    int line = peek().line;
    auto first_expr = parseExpression();

    if (match(TokenType::TK_COMMA)) {
        vector<shared_ptr<AstNode>> elements;
        elements.push_back(std::move(first_expr));

        if (!isAtEnd() && peek().type != TokenType::TK_SEMICOLON && peek().type != TokenType::TK_RPAREN &&
            peek().type != TokenType::TK_RBRACKET && peek().type != TokenType::TK_RBRACE &&
            peek().type != TokenType::TK_COLON &&
            peek().line == previous().line ) {

            elements.push_back(parseExpression());
            while (match(TokenType::TK_COMMA)) {
                if (isAtEnd() || peek().type == TokenType::TK_SEMICOLON || peek().type == TokenType::TK_RPAREN ||
                    peek().type == TokenType::TK_RBRACKET || peek().type == TokenType::TK_RBRACE ||
                    peek().type == TokenType::TK_COLON ||
                    peek().line != previous().line) {
                    break;
                }
                elements.push_back(parseExpression());
            }
        }
        auto tuple_node = make_shared<AstNode>(NodeType::TupleLiteralNode, Token{TokenType::TK_LPAREN, "(", line, TokenCategory::KEYWORD});
        tuple_node->children = std::move(elements);
        return tuple_node;
    } else {
        return first_expr;
    }
}

shared_ptr<AstNode> Parser::parseImportStatement() {
    Token import_token = consume(TokenType::TK_IMPORT, "Expected 'import'.");
    if (this->had_error) return make_shared<AstNode>(NodeType::PassStatementNode, Token{TokenType::TK_PASS, "pass", import_token.line, TokenCategory::KEYWORD});

    Token module_token = consume(TokenType::TK_IDENTIFIER, "Expected module name after 'import'.");
    if (this->had_error) return make_shared<AstNode>(NodeType::PassStatementNode, Token{TokenType::TK_PASS, "pass", import_token.line, TokenCategory::KEYWORD});

    string module_name_str = module_token.lexeme;
    int name_line_start = module_token.line;
    shared_ptr<AstNode> alias_node = nullptr;

    if (match(TokenType::TK_AS)) {
        Token alias_token = consume(TokenType::TK_IDENTIFIER, "Expected alias name after 'as'.");
        if (this->had_error) return make_shared<AstNode>(NodeType::PassStatementNode, Token{TokenType::TK_PASS, "pass", import_token.line, TokenCategory::KEYWORD});
        alias_node = make_shared<AstNode>(NodeType::IdentifierNode, alias_token);
        alias_node->value = alias_token.lexeme;
    }
